@@ -9,9 +9,9 @@ Version 2.18
 
 * The following bugs are resolved with this release:
 
-  11561, 13550, 13951, 14142, 14200, 14317, 14327, 14496, 14920, 14964,
-  14981, 14982, 14985, 14994, 14996, 15003, 15006, 15020, 15023, 15036,
-  15054, 15055, 15062, 15078, 15160, 15232.
+  11561, 12723, 13550, 13951, 14142, 14200, 14317, 14327, 14496, 14920,
+  14964, 14981, 14982, 14985, 14994, 14996, 15003, 15006, 15020, 15023,
+  15036, 15054, 15055, 15062, 15078, 15160, 15232.
 
 * Add support for calling C++11 thread_local object destructors on thread
   and program exit.  This needs compiler support for offloading C++11
