@@ -1,3 +1,12 @@
+2013-03-07  Siddhesh Poyarekar  <siddhesh@redhat.com>
+
+	[BZ #12723]
+	* posix/Makefile (tests): Add tst-pathconf.
+	* posix/tst-pathconf.c: New test case.
+	* sysdeps/unix/sysv/linux/fpathconf.c (__fpathconf): Remove
+	_PC_PIPE_BUF.
+	* sysdeps/unix/sysv/linux/pathconf.c (__pathconf): Likewise.
+
 2013-03-06  Patsy Franklin  <pfrankli@redhat.com>
 
 	* io/fcntl.h: Added a comment about AT_EACCESS and AT_REMOVEDIR.
